# sdformat-release2

./: .hg_archival.txt  .hgtags  CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
